--- a/app/views/bins/edit.html.erb
+++ b/app/views/bins/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', bin: @bin %>
 
-<%= link_to 'Show', @bin %> |
+<%= link_to 'Show', "/bins/#{@bin.url}" %> |
 <%= link_to 'Back', bins_path %>
