--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -37,3 +37,9 @@
 .mb-2 {
   margin: 0 0 15px 0;
 }
+
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+
+/* Add any custom CSS here */
+@import "tailwindcss/utilities";
